--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -44,9 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'c:\\Users\\austin' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
     "import sys\n",
@@ -243,8 +252,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "8511e03213d67b3102df803bbfd9f3594c87d6a47de97c6aef092a22eb5d53b9"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
