FINAL_FINAL (with warnings)

--- a/Machine_learning_HW3.ipynb
+++ b/Machine_learning_HW3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -87,22 +87,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nw/w4qqp9cn2pzf07v9rtxqb53h0000gn/T/ipykernel_22379/3925956949.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.department[i] = \"sewing\"\n",
-      "/var/folders/nw/w4qqp9cn2pzf07v9rtxqb53h0000gn/T/ipykernel_22379/3925956949.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.department[i] = \"finishing\"\n",
-      "/var/folders/nw/w4qqp9cn2pzf07v9rtxqb53h0000gn/T/ipykernel_22379/3925956949.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/nw/w4qqp9cn2pzf07v9rtxqb53h0000gn/T/ipykernel_22379/1406840763.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df.satisfied[i] = 1\n",
-      "/var/folders/nw/w4qqp9cn2pzf07v9rtxqb53h0000gn/T/ipykernel_22379/3925956949.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/nw/w4qqp9cn2pzf07v9rtxqb53h0000gn/T/ipykernel_22379/1406840763.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -111,12 +101,8 @@
     }
    ],
    "source": [
-    "for i in range(len(df.department)):\n",
-    "    if df.department[i] == \"sweing\":\n",
-    "        df.department[i] = \"sewing\"\n",
-    "    if df.department[i] == \"finishing \":\n",
-    "        df.department[i] = \"finishing\"\n",
-    "\n",
+    "df['department'] = df['department'].str.replace('sweing', 'sewing')\n",
+    "df['department'] = df['department'].str.replace('finishing ', 'finishing')\n",
     "\n",
     "df['satisfied'] = None\n",
     "\n",
@@ -135,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +465,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +491,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
