--- a/Machine_learning_HW3.ipynb
+++ b/Machine_learning_HW3.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "df = pd.read_csv(\"garments_worker_productivity.csv\")\n",
     "\n",
+    "#drop the date column\n",
     "df.drop('date', axis=1, inplace=True)"
    ]
   },
@@ -101,20 +102,25 @@
     }
    ],
    "source": [
+    "# replace all instances of 'sweing' to 'sewing' and 'finishing ' to 'finishing'\n",
     "df['department'] = df['department'].str.replace('sweing', 'sewing')\n",
     "df['department'] = df['department'].str.replace('finishing ', 'finishing')\n",
     "\n",
+    "# create a 'satisfied' column\n",
     "df['satisfied'] = None\n",
     "\n",
+    "#populate 'satisfied'\n",
     "for i in range(len(df)):\n",
     "    if df.actual_productivity[i] < df.targeted_productivity[i]:\n",
     "        df.satisfied[i] = 0\n",
     "    else:\n",
     "        df.satisfied[i] = 1\n",
     "\n",
+    "# drop 'actual_productivity' and 'targeted_productivity' columns\n",
     "df.drop('actual_productivity', axis=1, inplace=True)\n",
     "df.drop('targeted_productivity', axis=1, inplace=True)\n",
     "\n",
+    "# print any columns wiht NA values as True\n",
     "print(\"columns with empty values\")\n",
     "print(df.isnull().any())"
    ]
@@ -125,6 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fill NA values with 0\n",
     "df = df.fillna(value={'wip': 0})\n"
    ]
   },
